# activedb-engine

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  README.md
activedb-cli/: Cargo.toml  TESTING.md
activedb-cli/src/: cleanup.rs  config.rs  docker.rs  errors.rs  github_issue.rs  lib.rs  main.rs  metrics_sender.rs  project.rs  prompts.rs  sse_client.rs  update.rs  utils.rs
activedb-cli/src/commands/: add.rs  auth.rs  backup.rs  build.rs  check.rs  compile.rs  dashboard.rs  delete.rs  feedback.rs  init.rs  metrics.rs  migrate.rs  mod.rs  prune.rs  push.rs  restart.rs  start.rs  status.rs  stop.rs  sync.rs  update.rs  workspace_flow.rs
activedb-cli/src/tests/: check_tests.rs  compile_tests.rs  docker_tests.rs  init_tests.rs  lifecycle_tests.rs  project_tests.rs  test_utils.rs  utility_tests.rs
activedb-container/: Cargo.toml
activedb-container/src/: main.rs  queries.rs
activedb-core/: Cargo.toml
activedb-core/benches/: bm25_benches.rs  hnsw_benches.rs
activedb-core/src/: lib.rs
activedb-core/src/compiler/: mod.rs
activedb-core/src/engine/: macros.rs  mod.rs  types.rs
activedb-core/src/gateway/: gateway.rs  introspect_schema.rs  key_verification.rs
activedb-core/src/protocol/: error.rs  format.rs  mod.rs  request.rs  value.rs
activedb-core/src/utils/: aggregate.rs
activedb-core/tests/: capacity_optimization_benches.rs
activedb-macros/: Cargo.toml
activedb-macros/src/: lib.rs
activedb-macros/tests/: macro_tests.rs
aql-tests/: Cargo.toml
aql-tests/src/: main.rs
aql-tests/tests/add_e_borrowed_ids/: queries.rs
aql-tests/tests/adding_chunk_to_memory/: queries.rs
aql-tests/tests/full_project/: queries.rs
docker/: Dockerfile  Dockerfile.dev
metrics/: Cargo.toml
metrics/src/: lib.rs
(+202 files in other folders)
